--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +16,7 @@
 			<div class="sobre-box">
 				<img class="sobre" src="images/sobre.jpg" alt="sobre" />
 				<div class="link-container">
-					<a class="link" href="#carta">Toca me!</a>
+					<a class="link" href="#carta">Tócame! 💖</a>
 				</div>
 			</div>
 		</div>
@@ -113,6 +116,7 @@
 		<div id="carta" class="carta">
 			<div class="carta-container">
 				<h1>Para mi reina</h3>
+               <br>
 				<p>
 					Feliz día de las madres, mi cielo. Desde el inicio fuiste
 					muy buena novia, has sido excelente esposa, y sin dudas
@@ -138,7 +142,7 @@
 			<div class="sobre-box">
 				<img class="sobre" src="images/sobre.jpg" alt="sobre" />
 				<div class="link-container">
-					<a class="link" href="#body">Regresar</a>
+					<a class="link" href="#body">Regresar😊</a>
 				</div>
 			</div>
 		</div>
