--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	</head>
 
 	<body id="body">
+		<audio autoplay>
+			<source src="audio/music.mp3" type="audio/mpeg" />
+		</audio>
 		<div class="sobre-container">
 			<div class="sobre-box">
 				<img class="sobre" src="images/sobre.jpg" alt="sobre" />
@@ -151,9 +154,5 @@
 				</div>
 			</div>
 		</div>
-
-		<audio controls autoplay>
-			<source src="audio/music.mp3" type="audio/mpeg" />
-		</audio>
 	</body>
 </html>
