--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 	</head>
 
 	<body id="body">
-		<audio autoplay>
-			<source src="audio/music.mp3" type="audio/mpeg" />
-		</audio>
+		<p><b>Dale a play y toca la carta 😊</b></p>
+		<div class="audio-container">
+			<audio controls autoplay>
+				<source src="audio/music.mp3" type="audio/mpeg" />
+			</audio>
+		</div>
+
 		<div class="sobre-container">
 			<div class="sobre-box">
 				<img class="sobre" src="images/sobre.jpg" alt="sobre" />
