--- a/index.html
+++ b/index.html
@@ -125,28 +125,30 @@
 		</div>
 		<div id="carta" class="carta">
 			<div class="carta-container">
-				<h1>Para mi reina</h1>
+				<h1>Para mi reina... 💌</h1>
 				<br />
 				<p>
-					Feliz día de las madres, mi cielo. Desde el inicio fuiste
+					Feliz día de las madres👩🏻, mi cielo. Desde el inicio fuiste
 					muy buena novia, has sido excelente esposa, y sin dudas
 					puedo decir que eres una gran mamá. Una que se dedica de
-					lleno a cuidar a nuestros bebes, te esfuerzas mucho por su
+					lleno a cuidar a nuestros bebes🤱🏻, te esfuerzas mucho por su
 					educación, su alimentación, les das muchísimo amor y por mas
 					mal que te sientas, siempre tratas de darles tu mejor
 					sonrisa. Perdón por las veces que quizas te he dejado sola,
-					se que no soy perfecto, me estreso en algunos momentos y
-					digo cosas que no debo. Perdón por todo eso amor, ya que en
-					verdad haces demasiado, y muy pocas madres son como tu. Tus
-					bebés te aman y yo también. Deseo que Dios te llene de vida
-					y salud, que podamos estar juntos siempre y ver a nuestros
-					niños crecer. Eres la mejor madre del mundo para Sebastián y
-					Alana. Eres una excelente mamá! Felicidades en tu día!
+					se que no soy perfecto😔, me estreso en algunos momentos y
+					digo cosas que no debo. 🙏🏽Perdón por todo eso amor, ya que
+					en verdad haces demasiado, y muy pocas madres son como tu.
+					Tus bebés te aman y yo también😚. Deseo que Dios te llene de
+					vida y salud, que podamos estar juntos siempre y ver a
+					nuestros niños crecer. Eres la mejor madre del mundo para
+					Sebastián👶🏽 y Alana👶🏽. ¡Eres una excelente mamá!
+					¡Felicidades en tu día!🎉
 				</p>
 				<br />
 				<div class="photo">
 					<img class="family" src="images/pxl.jpg" alt="" />
 				</div>
+				<br />
 			</div>
 		</div>
 
