--- a/index.html
+++ b/index.html
@@ -131,18 +131,21 @@
 					Feliz día de las madres👩🏻, mi cielo. Desde el inicio fuiste
 					muy buena novia, has sido excelente esposa, y sin dudas
 					puedo decir que eres una gran mamá. Una que se dedica de
-					lleno a cuidar a nuestros bebes🤱🏻, te esfuerzas mucho por su
-					educación, su alimentación, les das muchísimo amor y por mas
-					mal que te sientas, siempre tratas de darles tu mejor
-					sonrisa. Perdón por las veces que quizas te he dejado sola,
-					se que no soy perfecto😔, me estreso en algunos momentos y
-					digo cosas que no debo. 🙏🏽Perdón por todo eso amor, ya que
-					en verdad haces demasiado, y muy pocas madres son como tu.
-					Tus bebés te aman y yo también😚. Deseo que Dios te llene de
-					vida y salud, que podamos estar juntos siempre y ver a
-					nuestros niños crecer. Eres la mejor madre del mundo para
-					Sebastián👶🏽 y Alana👶🏽. ¡Eres una excelente mamá!
-					¡Felicidades en tu día!🎉
+					lleno a cuidar a nuestros bebés🤱🏻, te esfuerzas mucho por su
+					educación, su alimentación, les das muchísimo amor y sin
+					importar que tan mal te sientas, siempre tratas de darles tu
+					mejor sonrisa. Perdón por las veces que quizás no te he
+					ayudado lo suficiente con ellos, se que no soy perfecto😔,
+					me estreso en algunos momentos y digo cosas que no debo.
+					🙏🏽Perdón por todo eso amor, ya que en verdad haces
+					demasiado, y muy pocas madres son como tu. Tus bebés te aman
+					y yo también😚. Deseo que Dios te llene de vida y salud, que
+					podamos estar juntos siempre y ver a nuestros niños crecer.
+					Eres la mejor madre del mundo para Sebastián👶🏽 y Alana👶🏽.
+					¡Eres una excelente mamá!
+					<br />
+					<br />
+					<b>¡Felicidades en tu día!🎉</b>
 				</p>
 				<br />
 				<div class="photo">
